--- a/ipcat-stable.tmpl
+++ b/ipcat-stable.tmpl
@@ -16,7 +16,7 @@ spec:
         app: ipcat-stable
     spec:
       containers:
-      - image: harbor.zuoguocai.xyz:4443/devops/ipcat:v1 
+      - image: harbor.zuoguocai.xyz:4443/devops/ipcat:<IMG_TAG>
         imagePullPolicy: Always
         name: ipcat-stable
         resources:
